tests/cases/memory/errors/null-non-pointer.ari
fn main() -> i64 {
  let value: i64 = null;
  return value;
}
